CREATE TABLE public.flyway_schema_history (
    installed_rank integer NOT NULL,
    version character varying(50),
    description character varying(200) NOT NULL,
    type character varying(20) NOT NULL,
    script character varying(1000) NOT NULL,
    checksum integer,
    installed_by character varying(100) NOT NULL,
    installed_on timestamp without time zone DEFAULT now() NOT NULL,
    execution_time integer NOT NULL,
    success boolean NOT NULL
);

CREATE TABLE public.owners (
    id integer NOT NULL,
    first_name character varying(30) COLLATE pg_catalog."en-US-x-icu",
    last_name character varying(30) COLLATE pg_catalog."en-US-x-icu",
    address text,
    city character varying(80) COLLATE pg_catalog."en-US-x-icu",
    telephone text
);

ALTER TABLE public.owners ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.owners_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);

CREATE TABLE public.pets (
    id integer NOT NULL,
    name text,
    birth_date date,
    type_id integer NOT NULL,
    owner_id integer
);

ALTER TABLE public.pets ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.pets_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);

CREATE TABLE public.roles (
    id integer NOT NULL,
    username character varying(20) NOT NULL,
    role character varying(20) NOT NULL
);

ALTER TABLE public.roles ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.roles_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);

CREATE TABLE public.specialties (
    id integer NOT NULL,
    name text,
    description text
);

ALTER TABLE public.specialties ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.specialties_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);

CREATE TABLE public.types (
    id integer NOT NULL,
    name text
);

ALTER TABLE public.types ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.types_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);

CREATE TABLE public.users (
    username character varying(20) NOT NULL,
    password character varying(60) NOT NULL,
    enabled boolean DEFAULT true NOT NULL
);

CREATE TABLE public.vet_specialties (
    vet_id integer NOT NULL,
    specialty_id integer NOT NULL
);

CREATE TABLE public.vets (
    id integer NOT NULL,
    first_name text,
    last_name text
);

ALTER TABLE public.vets ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.vets_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);

CREATE TABLE public.visits (
    id integer NOT NULL,
    pet_id integer,
    visit_date date,
    description text,
    visit_time time without time zone
);

ALTER TABLE public.visits ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.visits_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);

ALTER TABLE ONLY public.flyway_schema_history
    ADD CONSTRAINT flyway_schema_history_pk PRIMARY KEY (installed_rank);

ALTER TABLE ONLY public.owners
    ADD CONSTRAINT owners_pkey PRIMARY KEY (id);

ALTER TABLE ONLY public.pets
    ADD CONSTRAINT pets_pkey PRIMARY KEY (id);

ALTER TABLE ONLY public.users
    ADD CONSTRAINT pk_users PRIMARY KEY (username);

ALTER TABLE ONLY public.roles
    ADD CONSTRAINT roles_pkey PRIMARY KEY (id);

ALTER TABLE ONLY public.specialties
    ADD CONSTRAINT specialties_pkey PRIMARY KEY (id);

ALTER TABLE ONLY public.types
    ADD CONSTRAINT types_pkey PRIMARY KEY (id);

ALTER TABLE ONLY public.roles
    ADD CONSTRAINT uni_username_role UNIQUE (role, username);

ALTER TABLE ONLY public.vet_specialties
    ADD CONSTRAINT vet_specialties_vet_id_specialty_id_key UNIQUE (vet_id, specialty_id);

ALTER TABLE ONLY public.vets
    ADD CONSTRAINT vets_pkey PRIMARY KEY (id);

ALTER TABLE ONLY public.visits
    ADD CONSTRAINT visits_pkey PRIMARY KEY (id);

CREATE INDEX flyway_schema_history_s_idx ON public.flyway_schema_history USING btree (success);

CREATE INDEX owners_city_desc_name_idx ON public.owners USING btree (city DESC, last_name, first_name, id);

CREATE INDEX owners_city_name_idx ON public.owners USING btree (city, last_name, first_name, id);

CREATE INDEX owners_last_first_idx ON public.owners USING btree (last_name, first_name, id);

CREATE INDEX owners_last_name_pattern_idx ON public.owners USING btree (last_name text_pattern_ops);

CREATE INDEX pets_name_idx ON public.pets USING btree (name);

CREATE INDEX pets_owner_id_idx ON public.pets USING btree (owner_id);

CREATE INDEX specialties_name_idx ON public.specialties USING btree (name);

CREATE INDEX types_name_idx ON public.types USING btree (name);

CREATE INDEX vets_last_name_idx ON public.vets USING btree (last_name);

CREATE INDEX visits_pet_id_idx ON public.visits USING btree (pet_id);

ALTER TABLE ONLY public.pets
    ADD CONSTRAINT pets_owner_id_fkey FOREIGN KEY (owner_id) REFERENCES public.owners(id);

ALTER TABLE ONLY public.pets
    ADD CONSTRAINT pets_type_id_fkey FOREIGN KEY (type_id) REFERENCES public.types(id);

ALTER TABLE ONLY public.roles
    ADD CONSTRAINT roles_username_fkey FOREIGN KEY (username) REFERENCES public.users(username);

ALTER TABLE ONLY public.vet_specialties
    ADD CONSTRAINT vet_specialties_specialty_id_fkey FOREIGN KEY (specialty_id) REFERENCES public.specialties(id);

ALTER TABLE ONLY public.vet_specialties
    ADD CONSTRAINT vet_specialties_vet_id_fkey FOREIGN KEY (vet_id) REFERENCES public.vets(id);

ALTER TABLE ONLY public.visits
    ADD CONSTRAINT visits_pet_id_fkey FOREIGN KEY (pet_id) REFERENCES public.pets(id);
