@startuml
!pragma layout smetana

title Domain Model
footer Generated via reflection from domain/*.java by DomainModelExtractorTest

hide empty members
skinparam classAttributeIconSize 0

class Owner {
  id : Integer
  firstName : String
  lastName : String
  address : String
  city : String
  telephone : String
}
class Pet {
  id : Integer
  name : String
  birthDate : LocalDate
}
class PetType {
  id : Integer
  name : String
}
class Role {
  id : Integer
  name : String
}
class Specialty {
  id : Integer
  name : String
  description : String
}
class User {
  username : String
  password : String
  enabled : Boolean
}
class Vet {
  id : Integer
  firstName : String
  lastName : String
}
class Visit {
  id : Integer
  date : LocalDate
  time : LocalTime
  description : String
}
class VisitDateRange {
  earliest : LocalDate
  latest : LocalDate
}

Owner "1" -- "0..*" Pet : owner
Pet "1" -- "0..*" Visit : pet
PetType "1" -- "0..*" Pet : type
User "1" -- "0..*" Role : user
Vet "1" -- "0..*" Specialty : specialties

@enduml
